--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:frontend": "vite",
+    "dev:backend": "node backend/server.js",
+    "init-db": "node backend/init-db.js",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -12,10 +15,12 @@
     "react": "^19.2.3",
     "lucide-react": "^0.562.0",
     "@google/genai": "^1.34.0",
-    "@google/generative-ai": "^0.1.3",
+    "react-dom": "^19.2.3",
+    "express": "^4.18.2",
     "pg": "^8.11.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "react-dom": "^19.2.3"
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
